# sat-spotter-cli

./: .gitignore  README.md  pyproject.toml  satellites.json
data/cache/: 25544.tle  46984.tle  60508.tle
src/sat_spotter/: __init__.py  cli.py  config.py  display.py  export.py  list_sats.py  location.py  models.py  passes.py  plot.py  predict.py  remove.py  search.py  tle.py  visibility.py
src/sat_spotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_display.py  test_plot.py  test_tle.py
