[project]
name = "sat-spotter"
version = "0.1.0"
description = "Satellite tracking and pass prediction"
requires-python = ">=3.12"
dependencies = [
    "skyfield>=1.49",
    "httpx>=0.27",
    "rich>=13.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
viz = [
    "matplotlib>=3.9",
    "plotly>=5.22",
]
learn = [
    "astropy>=6.1",
    "poliastro>=0.17",
    "jupyterlab>=4.2",
]

[project.scripts]
sat-spotter = "sat_spotter.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
